Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
     postcards
+URL: https://github.com/hadley/hadleynz
+BugReports: https://github.com/hadley/hadleynz/issues
