--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
-    postcards
+    postcards,
+    rmarkdown
 URL: https://github.com/hadley/hadleynz
 BugReports: https://github.com/hadley/hadleynz/issues
