--- a/.github/workflows/render-rmarkdown.yaml
+++ b/.github/workflows/render-rmarkdown.yaml
@@ -25,8 +25,8 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v2
 
       - name: Render Rmarkdown files
-        run: >
-          rmarkdown::render("index.Rmd", output_dir = "docs")
+        run: rmarkdown::render("index.Rmd", output_dir = "docs")
+        shell: Rscript {0}
 
       - name: Deploy to GitHub pages 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
