--- a/.github/workflows/render.yaml
+++ b/.github/workflows/render.yaml
@@ -7,31 +7,24 @@ on:
     branches: [main, master]
   workflow_dispatch:
 
-name: render-rmarkdown
+name: render.yaml
 
 jobs:
-  render-rmarkdown:
+  render:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - uses: r-lib/actions/setup-pandoc@v2
+      - uses: actions/checkout@v4
 
       - uses: r-lib/actions/setup-r@v2
-
       - uses: r-lib/actions/setup-r-dependencies@v2
+      - uses: quarto-dev/quarto-actions/setup@v2
 
-      - name: Render Rmarkdown files
-        run: rmarkdown::render("site/index.Rmd")
-        shell: Rscript {0}
+      - uses: uses: quarto-dev/quarto-actions/render@v2
 
       - name: Deploy to GitHub pages 🚀
         uses: JamesIves/github-pages-deploy-action@v4.5.0
         with:
           branch: gh-pages
-          folder: site
+          folder: _site
