--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -23,10 +23,11 @@ jobs:
 
       - uses: quarto-dev/quarto-actions/render@v2
 
-      - name: Copy public key
+      - name: Copy public key; supress jekyll
         run: |
           mkdir -p _site/.well-known/appspecific
           cp com.tesla.3p.public-key.pem _site/.well-known/appspecific
+          touch _site/.nojekyll 
 
       - name: Deploy to GitHub pages 🚀
         uses: JamesIves/github-pages-deploy-action@v4.5.0
